smb: Fix IPv6 uri handling

IPv6 server includes brackets in GMountSpec, smbclient doesn't. Remove
the brackets from the uri before usage in smbclient functions.

The IPv6 uris can be consequently used in the following format (port
isn't mandatory), e.g.:
gvfs-mount smb://[::1]:139/

https://bugzilla.gnome.org/show_bug.cgi?id=604116